recursion.lessons.recursion.koch.Koch.scala.error
Koch:19: error: not found: value current
	current(levels)
        ^